--- a/src/css/header.module.css
+++ b/src/css/header.module.css
@@ -48,7 +48,7 @@
 
 .git {
     position: fixed;
-    z-index: 10;
+    z-index: 55;
     background: var(--side);
     padding: 10px 20px;
     border-radius: 20px;
@@ -82,6 +82,8 @@
 }
 
 .footer {
+    position: relative;
+    z-index: 25;
     width: 100%;
     min-height: 100px;
     float: left;
