--- a/src/css/start.module.css
+++ b/src/css/start.module.css
@@ -2,7 +2,7 @@
     height: calc(100vh - 60px);
     filter: brightness(0.4);
     width: 100%;
-    position: absolute;
+    position: fixed;
     z-index: 0;
 }
 
@@ -10,8 +10,8 @@
     margin-top: 0;
     margin-bottom: 0;
     color: #fff;
-    position: absolute;
-    z-index: 1
+    z-index: 1;
+    position: relative;
 }
 
 .start h1 {
@@ -19,7 +19,7 @@
     width: 100%;
     float: left;
     text-align: center;
-    padding-top: calc(50vh - 150px)
+    padding-top: calc(50vh - 450px)
 }
 
 .start h2 a:hover {
